--- a/roles/middleware/tasks/main.yml
+++ b/roles/middleware/tasks/main.yml
@@ -3,12 +3,41 @@
   get_url:
     url: https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
     dest: /usr/local/bin/docker-compose
-    mode: 0644
+    mode: 0755
 
 - name: "Create symbolic link for docker-compose"
   file:
     src: /usr/local/bin/docker-compose
     dest: /usr/bin/docker-compose
-    owner: ubuntu
-    group: ubuntu
     state: link
+
+- name: "pull openresty image"
+  docker_image:
+    name: "{{ Openresty_Image_Name }}"
+    source: pull
+
+- name: "pull middleware-app imgae"
+  docker_image:
+    name: "{{ Middleware_Image_Name }}"
+    source: pull
+
+- name: "Copy Docker-compose file"
+  template:
+    src: templates/docker-compose.yml.j2
+    dest: /home/ubuntu/docker-compose.yml
+
+- name: "Create docker volume"
+  docker_volume:
+    name: "{{ Openresty_Volume_Name }}"
+
+- name: "Run Docker-compose as a systemd service"
+  template:
+    src: templates/middleware.service.j2
+    dest: /etc/systemd/system/middleware.service
+    owner: root
+    group: root
+    mode: 0644
+  notify:
+   - Run daemon-reload command to apply the changes
+   - start and enable middleware service
+
