update middleware handlers

--- a/roles/middleware/handlers/main.yml
+++ b/roles/middleware/handlers/main.yml
@@ -7,7 +7,7 @@
   service:
     name: middleware
     enabled: yes
-- name:
+- name: "restart middleware service"
   service:
     name: middleware
     state: restarted
