uodate haproxy handlers v1.2

--- a/roles/haproxy/handlers/main.yml
+++ b/roles/haproxy/handlers/main.yml
@@ -7,8 +7,8 @@
 - name: "start haproxy service"
   service:
     name: haproxy
-    state: started
-    
+    state: restarted
+
 - name: "enable haproxy service"
   service:
     name: haproxy
